--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,13 @@ buildscript {
 apply plugin: 'forge'
 
 version = "${minecraft_version}-${mod_version}"
-group= "${mod_package}${mod_id}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group= "${mod_package}.${mod_id}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "${mod_id}"
 
 minecraft {
     version = "${minecraft_version}-${forge_version}"
     
-    if (file('..run/').exists()) {
+    if (file('../run/').exists()) {
         assetDir = "../run/assets"
     } else {
         assetDir = "assets"
