--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "${minecraft_version}-${mod_version}"
+version = "${minecraft_version}-${mod_version}" + System.getenv("BUILD_NUMBER") ?: "1"
 group= "${mod_package}.${mod_id}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "${mod_base}"
 
