--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,24 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "${minecraft_version}-${mod_version}" + System.getenv("BUILD_NUMBER") ?: "1"
-group= "${mod_package}.${mod_id}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "${minecraft_version}-${mod_version}." + System.getenv("BUILD_NUMBER") ?: "0"
+group= "${mod_package}.${mod_id}" /*
+ * Copyright 2014. Kevin "shooshosha" O'Brien (shooshosha@gmail.com) License: LGPLv3 or later
+ *
+ * This file is part of DarkSoulsCraft.
+ *
+ * DarkSoulsCraft is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, version 3 of the License.
+ *
+ * DarkSoulsCraft is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with DarkSoulsCraft.  If not, see <http://www.gnu.org/licenses/>.
+ */ // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "${mod_base}"
 
 minecraft {
