--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: java
 jdk:
-  - oraclejdk7
-
+- oraclejdk7
 before_install:
-  - cd build
-  - chmod +x gradlew
-install: ./gradlew setupCIWorkspace -S
-script: ./gradlew build -S
-
+- cd build
+- chmod +x gradlew
+install: "./gradlew setupCIWorkspace -S"
+script: "./gradlew build -S"
 env:
-  global:
-    TERM=dumb
+  global: TERM=dumb
+deploy:
+  provider: releases
+  api_key:
+    secure: jM0oFxkJ2SZ+HLVNJpZ7FVwO13+k8uSuh0t+CcKMRurhmJ8NAaiTBgpFrXmvTwzc+RvnRipke1dCHG649ZYbFN/uat2bzj6TRPENJ7JOhbVifHcoKnVL/qhsGGTpDQh90IfNQZ3Ccz0HpmFFWstBp5jp2V97GAghCvWKFR/vMVQ=
+  file: make/build/lib/*universal.jar
+  on:
+    repo: ShooShoSha/DarkSoulsCraft
+    branch: release
