--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,16 @@ before_install:
 - chmod +x gradlew
 install: "./gradlew setupCIWorkspace -S"
 script: "./gradlew build -S"
+after_script:
+  - "ls -al"
 env:
   global: TERM=dumb
 deploy:
   provider: releases
   api_key:
     secure: jM0oFxkJ2SZ+HLVNJpZ7FVwO13+k8uSuh0t+CcKMRurhmJ8NAaiTBgpFrXmvTwzc+RvnRipke1dCHG649ZYbFN/uat2bzj6TRPENJ7JOhbVifHcoKnVL/qhsGGTpDQh90IfNQZ3Ccz0HpmFFWstBp5jp2V97GAghCvWKFR/vMVQ=
-  file: build/lib/*universal.jar
+  file:
+    - "build/lib/*universal.jar"
   skip_cleanup: true
   on:
     repo: ShooShoSha/DarkSoulsCraft
