--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ before_install:
 - chmod +x gradlew
 install: "./gradlew setupCIWorkspace -S"
 script: "./gradlew build -S"
+after_script:
+- "ls -al"
+- "pwd"
 
 env:
   global: TERM=dumb
