--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ before_install:
 install: "./gradlew setupCIWorkspace -S"
 script: "./gradlew build -S"
 after_script:
-- "ls -al"
-- "pwd"
+- "echo TRAVIS_BUILD_DIR"
+- "echo {mod_base}"
+- "echo ${project.version}"
 
 env:
   global: TERM=dumb
@@ -18,7 +19,7 @@ deploy:
   api_key:
     secure: jM0oFxkJ2SZ+HLVNJpZ7FVwO13+k8uSuh0t+CcKMRurhmJ8NAaiTBgpFrXmvTwzc+RvnRipke1dCHG649ZYbFN/uat2bzj6TRPENJ7JOhbVifHcoKnVL/qhsGGTpDQh90IfNQZ3Ccz0HpmFFWstBp5jp2V97GAghCvWKFR/vMVQ=
   file:
-    - "/home/travis/make/build/lib/*.jar"
+    - "TRAVIS_BUILD_DIR/make/build/lib/{mod_base}-{project.version}.jar"
   skip_cleanup: true
   on:
     repo: ShooShoSha/DarkSoulsCraft
